exports[`TS Compile > compiles a valid project 1`] = `
{
  "logs": {
    "stdout": "Installing typescript@5.5.4...\\nDeleting dist...\\nDeleting tsconfig.tsbuildinfo...\\nCompiling...\\n> npx tsc --pretty\\ncompile finished."
  },
  "cwd": "packages/compile/test-files/pass-compile",
  "contentsDiff": {
    "package.json": "{\\n  \\"devDependencies\\": {\\n    \\"typescript\\": \\"^5.5.4\\"\\n  }\\n}\\n",
    "dist": {
      "a.js": "\\"use strict\\";\\nObject.defineProperty(exports, \\"__esModule\\", { value: true });\\nexports.value = void 0;\\nexports.value = {\\n    here: 'yo',\\n    there: 0,\\n};\\n"
    }
  }
}
`;

exports[`TS Compile > rejects an invalid project 1`] = `
{
  "logs": {
    "stdout": "Installing typescript@5.5.4...\\nDeleting dist...\\nDeleting tsconfig.tsbuildinfo...\\nCompiling...\\n> npx tsc --pretty\\nsrc/a.ts:12:5 - error TS2353: Object literal may only specify known properties, and 'no' does not exist in type 'A'.\\n\\n12     no: 'bad',\\n       ~~\\n\\n\\nFound 1 error in src/a.ts:12\\n",
    "stderr": "compile failed."
  },
  "cwd": "packages/compile/test-files/fail-compile",
  "contentsDiff": {
    "package.json": "{\\n  \\"devDependencies\\": {\\n    \\"typescript\\": \\"^5.5.4\\"\\n  }\\n}\\n",
    "dist": {
      "a.js": "\\"use strict\\";\\nObject.defineProperty(exports, \\"__esModule\\", { value: true });\\nexports.value2 = exports.value = void 0;\\nexports.value = {\\n    here: 'yo',\\n    there: 0,\\n};\\nexports.value2 = {\\n    no: 'bad',\\n};\\n"
    }
  },
  "error": {
    "name": "VirmatorNoTraceError"
  }
}
`;

exports[`TS Compile > works in a mono-repo 1`] = `
{
  "logs": {
    "stdout": "Copied tsconfig.base.json\\nCopied tsconfig.json\\nCopied tsconfig.json\\nInstalling mono-vir@1.0.1...\\n[packages/a] Deleting dist...\\n[packages/a] Deleting tsconfig.tsbuildinfo...\\n[packages/a] Compiling...\\n[packages/a] > npx tsc -b --pretty\\n[packages/b] Deleting dist...\\n[packages/b] Deleting tsconfig.tsbuildinfo...\\n[packages/b] Compiling...\\n[packages/b] > npx tsc -b --pretty\\n[packages/a] npx tsc -b --pretty exited with code 0\\n[packages/b] npx tsc -b --pretty exited with code 0\\ncompile finished."
  },
  "cwd": "packages/compile/test-files/mono-repo",
  "contentsDiff": {
    "package.json": "{\\n    \\"private\\": true,\\n    \\"workspaces\\": [\\n        \\"packages/*\\"\\n    ],\\n    \\"devDependencies\\": {\\n        \\"mono-vir\\": \\"^1.0.1\\"\\n    }\\n}\\n",
    "packages": {
      "a": {
        "dist": {
          "a.d.ts": "export type A = {\\n    here: string;\\n    there: number;\\n};\\nexport declare const value: A;\\n",
          "a.js": "export const value = {\\n    here: 'yo',\\n    there: 0,\\n};\\n"
        },
        "tsconfig.json": "{\\n    \\"compilerOptions\\": {\\n        \\"outDir\\": \\"./dist/\\",\\n        \\"rootDir\\": \\"./src/\\"\\n    },\\n    \\"exclude\\": [\\n        \\"./configs/\\",\\n        \\"./coverage/\\",\\n        \\"./dist/\\",\\n        \\"./dist-*/\\",\\n        \\"./node_modules/\\",\\n        \\"./test-files/\\"\\n    ],\\n    \\"extends\\": \\"../../configs/tsconfig.base.json\\"\\n}\\n"
      },
      "b": {
        "dist": {
          "b.d.ts": "export type B = {\\n    here: string;\\n    there: number;\\n};\\nexport declare const value: B;\\n",
          "b.js": "export const value = {\\n    here: 'yo',\\n    there: 0,\\n};\\n"
        },
        "tsconfig.json": "{\\n    \\"compilerOptions\\": {\\n        \\"outDir\\": \\"./dist/\\",\\n        \\"rootDir\\": \\"./src/\\"\\n    },\\n    \\"exclude\\": [\\n        \\"./configs/\\",\\n        \\"./coverage/\\",\\n        \\"./dist/\\",\\n        \\"./dist-*/\\",\\n        \\"./node_modules/\\",\\n        \\"./test-files/\\"\\n    ],\\n    \\"extends\\": \\"../../configs/tsconfig.base.json\\"\\n}\\n"
      }
    },
    "configs": {
      "tsconfig.base.json": "{\\n    \\"extends\\": \\"@virmator/compile/configs/tsconfig.base.json\\"\\n}\\n"
    }
  }
}
`;
